--- a/CSS/style.css
+++ b/CSS/style.css
@@ -65,12 +65,23 @@
 .time .upper{
     height: 50%;
     width: 100%;
-    background-color: gray;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(214, 208, 208);
+    color: #272525;
 }
 .time .lower{
     height: 50%;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #F15A29;
+    color: white;
+}
+.time p{
+    font-size: 28px;
 }
 .sectiontwo .breako{
     width: 25%;
