--- a/CSS/style.css
+++ b/CSS/style.css
@@ -134,7 +134,7 @@
 
 /* Start of section Three */
 .sectionthree{
-    height: 100vh;
+    height: 150vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -144,10 +144,103 @@
 .sectionthree .upperdiv{
     height: 48%;
     width: 75%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     background-color: aqua;
+}
+
+.upperdiv .img{
+    height: 80%;
+    width: 48%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    box-shadow: 1px 1px 6px #999393;
+}
+
+.upperdiv .text{
+    height: 80%;
+    width: 40%;
+    margin-left: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-evenly;
+    /* background-color: rgb(62, 107, 146); */
+}
+.text .Heading{
+    font-weight: 600;
+}
+.text button{
+    padding: 10px 25px;
+    border: solid 1px #F15A29;
+    color: #F15A29;
+    background-color: transparent;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.arrow{
+    margin-left: 10px;
+}
+.text h1{
+    font-size: 32px;
 }
 .sectionthree .lowerdiv{
     height: 48%;
     width: 75%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     background-color: aquamarine;
+}
+.lowerdiv .img{
+    height: 80%;
+    width: 48%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    box-shadow: 1px 1px 6px #999393;
+    background-color: white;
+    margin-left: 10%;
+}
+
+.lowerdiv .text{
+    height: 80%;
+    width: 40%;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    text-align: end;
+    justify-content: flex-end;
+    background-color: rgb(62, 107, 146);
+}
+.lowerdiv .text button{
+    padding: 10px 25px;
+    border: solid 1px #F15A29;
+    color: #F15A29;
+    background-color: transparent;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.lowerdiv.text h1{
+    font-size: 32px;
+}
+.lowerdiv .text .Heading{
+    font-weight: 600;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
