--- a/CSS/style.css
+++ b/CSS/style.css
@@ -319,7 +319,6 @@
     align-items: center;
     text-align: center;
     justify-content: space-between;
-    background-color: aquamarine;
     /* position: relative; */
 }
 .photos .mshale1{
@@ -342,3 +341,20 @@
 /* End of section Four */
 
 /* Start of section Five */
+.sectionfive{
+    height: 50vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+}
+.sectionfive .maindiv{
+    height: 75%;
+    width: 75%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #fff;
+    box-shadow: 1px 1px 6px #999393;
+}
