--- a/CSS/style.css
+++ b/CSS/style.css
@@ -342,7 +342,7 @@
 
 /* Start of section Five */
 .sectionfive{
-    height: 50vh;
+    height: 40vh;
     width: 100%;
     display: flex;
     align-items: center;
@@ -353,8 +353,38 @@
     height: 75%;
     width: 75%;
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     background-color: #fff;
     box-shadow: 1px 1px 6px #999393;
+}
+.maindiv .testmony{
+    height: 100%;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    /* background-color: aqua; */
+}
+.pictures{
+    margin-top: 20px;
+    height: 25%;
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    /* background-color: #999393; */
+}
+.pictures img{
+    margin: 5px;
+}
+.maindiv .aboutMenu{
+    height: 80%;
+    width: 40%;
+    border-left: solid 1px rgb(196, 182, 182);
+    /* background-color: aquamarine; */
 }
