--- a/CSS/style.css
+++ b/CSS/style.css
@@ -408,3 +408,97 @@
 .aboutMenu p{
     line-height: 1.7;
 }
+/* End of Section Five */
+
+/* Start of section Six */
+.sectionsix{
+    height: 90vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.sectionsix .action{
+    height: 50%;
+    width: 100%;
+    background-image: url(../Images/backgrounds/subscribe.jpg);
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.action p{
+    color: white;
+    font-size: 30px;
+    margin-left: 50px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+.action input{
+    height: 40px;
+    width: 500px;
+    background-color: rgba(255, 255, 255, 0.6);
+    border: none;
+    opacity: 0.3;
+    border-radius: 5px;
+}
+.action button{
+    padding: 9px 60px 9px 60px;
+    margin-left: 25px;
+    border-radius: 5px;
+    border: none;
+    color: white;
+    background-color: #F15A29;
+    font-weight: 400;
+}
+.action .input{
+    margin-left: 50px;
+}
+::placeholder{
+    padding-left: 30px;
+    color: white;
+    font-weight: 600;
+}
+.sectionsix .footer{
+    height: 50%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #F15A29;
+    position: relative;
+}
+.three img{
+    color: #F15A29;
+    padding: 5px;
+}
+.four{
+    position: absolute;
+    bottom: 5%;
+    color: white;
+    font-size: 15px;
+    font-weight: 200;
+}
+.three{
+    position: absolute;
+    bottom: 25%;
+}
+.two{
+    position: absolute;
+    top: 40%;
+    color: white;
+}
+.one{
+    position: absolute;
+    top: 20%;
+    display: flex;
+    flex-direction: row;
+    color: white;
+}
+.one h1{
+    /* font-size: 50px; */
+    font-weight: 400;
+    margin-left: 30px;
+}
