--- a/CSS/style.css
+++ b/CSS/style.css
@@ -336,7 +336,7 @@
 }
 .sectionfive .maindiv{
     height: 75%;
-    width: 75%;
+    width: 80%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -368,7 +368,7 @@
     margin: 5px;
 }
 .maindiv .aboutMenu{
-    height: 70%;
+    height: 75%;
     width: 40%;
     display: flex;
     flex-direction: column;
@@ -376,11 +376,12 @@
     justify-content: space-between;
     text-align: center;
     border-left: solid 1px rgb(196, 182, 182);
-    /* background-color: aquamarine; */
+    background-color: aquamarine;
 }
 .aboutMenu h1{
     color: #F15A29;
     font-size: 18px;
+    margin-bottom: 20px;
 }
 .testmony h1{
     color: #F15A29;
@@ -392,6 +393,7 @@
 }
 .aboutMenu p{
     line-height: 1.7;
+    /* font-sizeq: 15px; */
 }
 /* End of Section Five */
 
