Changed the Color of Menu Items

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -330,7 +330,7 @@
     justify-content: space-between;
 }
 .photos p{
-    color: #F15A29;
+    color: black;
     margin-top: 10px;
     font-weight: 600;
 }
